--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/gdmec/fileserver#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "images": "^3.0.2",
     "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
     "nodejs-websocket": "^1.7.2",
